--- a/assets/style.css
+++ b/assets/style.css
@@ -41,6 +41,7 @@
     padding-left: 10px;
     box-shadow: 0 3px 10px rgb(1 1 1 / 0.9);
     background-color:#9FA4C4;
+    
 }
 #search-button{
     border-radius: 10px;
@@ -49,10 +50,12 @@
     width:4rem;
     box-shadow: 0 3px 10px rgb(1 1 1 / 0.9);
     background-color: #9FA4C4;
+    cursor: pointer;
 
 }
 #search-button:hover{
     background-color: #ee6f35;
+    
 }
 
 .placeholder{
@@ -60,15 +63,55 @@
     color: beige;
     
 }
+.historyBtn{
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.historyBtn button{
+    margin-top: 1rem;
+    border-radius: 10px;
+    border-style: none;
+    height:2rem;
+    width:5rem;
+    box-shadow: 0 3px 10px rgb(1 1 1 / 0.9);
+    background-color: #9FA4C4;
+    cursor: pointer;
+    padding: 0 5px 0 5px;
+}    
+.historyBtn button:hover{
+    background-color: #ee6f35;
+} 
+ .historyCard{
+    
+    position: absolute;
+    width:30rem;
+    height:20rem;
+    background-color: #ee6f35;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px 50px 50px 50px;
+    box-shadow: 0 3px 10px rgb(1 1 1 / 0.9);
+    display: none;
+    
+
+} 
 .locationWrapper{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+.data{
+    margin-top: -3rem;
+}
 .location{
     display: inline;
     font-size: 1.5rem;
-    margin-top: -3rem;
+    margin-top: rem;
     text-shadow: 0 3px 10px rgb(1 1 1 / 0.5);
     color:#9FA4C4;
 }
@@ -247,4 +290,65 @@
     align-items: center;
     justify-content: center;
     color:beige;
+}
+.historyCard form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+button.remove{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 1rem;
+    border-radius: 10px;
+    border-style: none;
+    height:2rem;
+    width:5rem;
+    box-shadow: 0 3px 10px rgb(1 1 1 / 0.9);
+    background-color: #9FA4C4;
+    cursor: pointer;
+    padding: 0 5px 0 5px;
+
+}
+#exit{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 5;
+    margin:auto;
+    display: none;
+
+    border-radius: 10px;
+    border-style: none;
+    height:2rem;
+    width:5rem;
+    box-shadow: 0 3px 10px rgb(1 1 1 / 0.9);
+    background-color: #9FA4C4;
+    cursor: pointer;
+    padding: 0 5px 0 5px;
+}
+
+.exitWapper{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15rem;
+}
+.exitbtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#searchHistory{
+    cursor: pointer;
+    width: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
